--- a/random-network-distillation-pytorch-master/playground.ipynb
+++ b/random-network-distillation-pytorch-master/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import gym\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from PIL import Image"
+    "from PIL import Image\n",
+    "import torch"
    ]
   },
   {
@@ -95,6 +96,55 @@
    ],
    "source": [
     "plt.imshow(X_processed, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.randn((3, 4, 5, 6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 4, 5])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.mean(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([  1.3567,  -7.0999, -10.8864])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.sum(list(range(1, len(a.shape))))"
    ]
   }
  ],
